--- a/src/views/bottomManager.ejs
+++ b/src/views/bottomManager.ejs
@@ -8,7 +8,16 @@
 </head>
 <body>
 <h1>Bottoms Inventory</h1>
-<a href="/" class="homeButton">HOME </a>
+<nav class="navbar">
+    <ul>
+        <li><a href="/" class="navbutton">Home</a></li>
+        <li><a href="/shoeManager" class="navbutton">Shoes</a></li>
+        <li><a href="/topManager" class="navbutton">Tops</a></li>
+        <li><a href="/bottomManager" class="navbutton">Bottoms</a></li>
+        <li><a href="/hatManager" class="navbutton">Hats</a></li>
+        <li><a href="/outerWearManager" class="navbutton">Outerwear</a></li>
+    </ul>
+</nav>
 
 <!-- Add Bottom Form -->
 <div class="form-container">
