--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,7 +9,7 @@
 <body>
 <h1>Kat's Clothes</h1>
 <h2>Where we find trash and sell it to you as 'clothes' at premium prices</h2>
-<h3>Site Navigation:</h3>
+<nav class="navbar">
 <ul>
     <li><a href="/shoeManager" class="button">Shoes</a></li>
     <li><a href="/topManager" class="button">Tops</a></li>
@@ -17,5 +17,6 @@
     <li><a href="/hatManager" class="button">Hats</a></li>
     <li><a href="/outerWearManager" class="button">Outerwear</a></li>
 </ul>
+</nav>
 </body>
 </html>
