--- a/src/views/outerwearManager.ejs
+++ b/src/views/outerwearManager.ejs
@@ -16,6 +16,7 @@
         <li><a href="/bottomManager" class="navbutton">Bottoms</a></li>
         <li><a href="/hatManager" class="navbutton">Hats</a></li>
         <li><a href="/outerWearManager" class="navbutton">Outerwear</a></li>
+        <li><a href="/miscManager" class="navbutton"> Misc</a></li>
     </ul>
 </nav>
 
